# nao

./: .env.example  .gitignore  README-dockerhub.md  README.md  docker-compose.git-context.yml  docker-compose.yml  package-lock.json  package.json
.claude/skills/code-review/: SKILL.md
.github/workflows/: analyse-issue.yml  claude-code-review.yml
apps/backend/: package.json  tsconfig.json
apps/backend/fastapi/: main.py
apps/backend/migrations-postgres/: 0007_chat_message_llm_info.sql
apps/backend/migrations-postgres/meta/: _journal.json
apps/backend/migrations-sqlite/: 0007_chat_message_llm_info.sql
apps/backend/migrations-sqlite/meta/: _journal.json
apps/backend/migrations/meta/: 0000_snapshot.json  _journal.json
apps/backend/src/: app.ts  auth.ts  cli.ts  router.ts
apps/backend/src/agents/: prompt.ts  providers.ts  tools.ts  transcribe.providers.ts  user-rules.ts
apps/backend/src/components/: system-prompt.tsx
apps/backend/src/db/: abstractSchema.ts  pgSchema.ts  schema.ts  sqliteSchema.ts
apps/backend/src/middleware/: auth.ts
apps/backend/src/queries/: account.queries.ts  chat.queries.ts  organization.queries.ts  project-llm-config.queries.ts  project.queries.ts  usage.queries.ts  user.queries.ts
apps/backend/src/routes/: auth.ts  chat.ts
apps/backend/src/services/: agent.service.ts  slack.service.ts  transcribe.service.ts
apps/backend/src/trpc/: chat.routes.ts  google.routes.ts  project.routes.ts  router.ts  transcribe.routes.ts  trpc.ts  user.routes.ts
apps/backend/src/types/: agent-settings.ts  chat.ts  llm.ts  project.ts
apps/backend/src/utils/: chat-message-part-mappings.ts  chatMessagePartMappings.ts  llm.ts  tools.ts  utils.ts
apps/backend/tests/: db.test.ts
apps/frontend/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: routeTree.gen.ts  styles.css  svg.d.ts
apps/frontend/src/components/: auth-form.tsx  chat-error.tsx  chat-input.tsx  chat-messages.tsx  header.tsx  settings-create-user-form.tsx  settings-display-mcp.tsx  settings-display-newUser.tsx  settings-display-users.tsx  settings-google-credentials-section.tsx  settings-google-form.tsx  settings-llm-config-form-fields.tsx  settings-llm-provider-card.tsx  settings-llm-providers-section.tsx  settings-modify-user-form.tsx  settings-transcribe.tsx  sidebar.tsx  signin-form.tsx  signinForm.tsx  sliding-waveform.tsx
apps/frontend/src/hooks/: use-agent.ts  use-google-settings.ts  use-llm-providers.ts  use-transcribe.ts  (+2 more)
apps/shared/: package.json
cli/: README.md  build.py  pyproject.toml
cli/nao_core/: __init__.py
cli/nao_core/commands/: chat.py  debug.py  init.py
cli/nao_core/commands/sync/: __init__.py  accessors.py  cleanup.py  databases.py  registry.py  repositories.py
cli/nao_core/commands/sync/providers/: base.py
cli/nao_core/commands/sync/providers/databases/: bigquery.py  databricks.py  duckdb.py  postgres.py  provider.py  snowflake.py
cli/nao_core/commands/sync/providers/repositories/: provider.py
cli/nao_core/config/: base.py
cli/nao_core/config/databases/: __init__.py  athena.py  base.py  bigquery.py  databricks.py  duckdb.py  postgres.py  snowflake.py
cli/nao_core/config/llm/: __init__.py
cli/nao_core/config/mcp/: __init__.py
cli/nao_core/config/repos/: __init__.py  base.py
cli/tests/nao_core/commands/sync/: test_cleanup.py
cli/tests/nao_core/commands/sync/integration/: test_athena.py
docker/: entrypoint.sh  supervisord.conf
example/: nao_config.yaml
scripts/: analyse_issue.py
(+39 files in other folders)
